src/sfdc/force-app/main/default/objects/B2C_Client_ID__c/B2C_Client_ID__c.object-meta.xml
<CustomObject>
    <description>... represents the collection of B2C Client IDs that can be used to authenticate against the B2C Commerce Account Manager and leverage in OCAPI REST API calls.</description>
    <label>B2C Client ID</label>
    <nameField>
        <label>B2C Client ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>B2C Client IDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>