src/sfdc/force-app/main/default/objects/B2C_Client_ID__c/fields/Audit_Authentication_API_Interactions__c.field-meta.xml
<CustomField>
    <fullName>Audit_Authentication_API_Interactions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>... when checked -- all B2C Commerce Account Manager authentication interactions are audited.</description>
    <inlineHelpText>... when checked -- all B2C Commerce Account Manager authentication interactions are audited.</inlineHelpText>
    <label>Audit Authentication API Interactions</label>
    <type>Checkbox</type>
</CustomField>