src/sfdc/force-app/main/default/objects/B2C_Client_ID__c/fields/AuthToken_Failures__c.field-meta.xml
<CustomField>
    <fullName>AuthToken_Failures__c</fullName>
    <defaultValue>0</defaultValue>
    <description>... represents the total number of failed B2C Commerce Account Manager AuthToken requests.</description>
    <inlineHelpText>... represents the total number of failed B2C Commerce Account Manager AuthToken requests.</inlineHelpText>
    <label>AuthToken Failures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>