src/sfdc/force-app/main/default/objects/B2C_Client_ID__c/fields/AuthToken_Successes__c.field-meta.xml
<CustomField>
    <fullName>AuthToken_Successes__c</fullName>
    <defaultValue>0</defaultValue>
    <description>... represents the total number of B2C Commerce Account Manager authTokens retrieved.</description>
    <inlineHelpText>... represents the total number of B2C Commerce Account Manager authTokens retrieved.</inlineHelpText>
    <label>AuthToken Successes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>