src/sfdc/force-app/main/default/objects/B2C_Client_ID__c/fields/B2C_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>B2C_Client_ID__c</fullName>
    <description>... represents the unique identifier that can be used to authenticate against the B2C Commerce Account Manager and leverage in OCAPI REST API call-outs.</description>
    <externalId>true</externalId>
    <inlineHelpText>... represents the unique identifier that can be used to authenticate against the B2C Commerce Account Manager and leverage in OCAPI REST API call-outs.</inlineHelpText>
    <label>B2C Client ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>