src/sfdc/force-app/main/default/objects/B2C_Client_ID__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>... represents a description or summary of how the specified B2C Client ID is used by B2C Commerce or the Salesforce Platform.</description>
    <inlineHelpText>... represents a description or summary of how the specified B2C Client ID is used by B2C Commerce or the Salesforce Platform.</inlineHelpText>
    <label>Description</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>