src/sfdc/force-app/main/default/objects/B2C_Client_ID__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>... when checked -- this B2C Client ID can be used authenticate against the B2C Commerce Account Manager.</description>
    <inlineHelpText>... when checked -- this B2C Client ID can be used authenticate against the B2C Commerce Account Manager.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>