src/sfdc/force-app/main/default/objects/B2C_Client_ID__c/fields/Is_Certificate_Verfied__c.field-meta.xml
<CustomField>
    <fullName>Is_Certificate_Verfied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>... describes if the referenced certificate could be validated / verified.  Only B2C Client IDs with valid certificates can be used to request AuthTokens from the B2C Commerce Account Manager.</description>
    <inlineHelpText>... describes if the referenced certificate could be validated / verified.  Only B2C Client IDs with valid certificates can be used to request AuthTokens from the B2C Commerce Account Manager.</inlineHelpText>
    <label>Is Certificate Verfied</label>
    <type>Checkbox</type>
</CustomField>