src/sfdc/force-app/main/default/objects/B2C_Client_ID__c/fields/JWT_Certificate_Name__c.field-meta.xml
<CustomField>
    <fullName>JWT_Certificate_Name__c</fullName>
    <description>... represents the Certificate that will be used to mint JWT tokens that can be exchanged for REST API AuthTokens via the B2C Commerce Account Manager.</description>
    <inlineHelpText>... represents the Certificate that will be used to mint JWT tokens that can be exchanged for REST API AuthTokens via the B2C Commerce Account Manager.</inlineHelpText>
    <label>JWT Certificate Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>