src/sfdc/force-app/main/default/objects/B2C_Client_ID__c/fields/Last_Failure_On__c.field-meta.xml
<CustomField>
    <fullName>Last_Failure_On__c</fullName>
    <description>... represents the date a B2C AuthToken failure was experienced by the B2C Commerce Account Manager.</description>
    <inlineHelpText>... represents the date a B2C AuthToken failure was experienced by the B2C Commerce Account Manager.</inlineHelpText>
    <label>Last Failure On</label>
    <summarizedField>B2C_Client_ID_Integration_History__c.CreatedDate</summarizedField>
    <summaryFilterItems>
        <field>B2C_Client_ID_Integration_History__c.Has_Error__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>B2C_Client_ID_Integration_History__c.B2C_Client_ID__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>