src/sfdc/force-app/main/default/objects/B2C_Client_ID__c/fields/Last_Success_On__c.field-meta.xml
<CustomField>
    <fullName>Last_Success_On__c</fullName>
    <description>... represents the date a B2C AuthToken was successfully retrieve from the B2C Commerce Account Manager.</description>
    <inlineHelpText>... represents the date a B2C AuthToken was successfully retrieve from the B2C Commerce Account Manager.</inlineHelpText>
    <label>Last Success On</label>
    <summarizedField>B2C_AuthToken__c.CreatedDate</summarizedField>
    <summaryForeignKey>B2C_AuthToken__c.B2C_Client_ID__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>