src/sfdc/force-app/main/default/objects/B2C_Client_ID__c/fields/Total_Failure_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Failure_Count__c</fullName>
    <description>... represents the count of failed authToken requests brokered via the B2C Commerce Account Manager.</description>
    <inlineHelpText>... represents the count of failed authToken requests brokered via the B2C Commerce Account Manager.</inlineHelpText>
    <label>Total Failure Count</label>
    <summaryFilterItems>
        <field>B2C_Client_ID_Integration_History__c.Has_Error__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>B2C_Client_ID_Integration_History__c.B2C_Client_ID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>