src/sfdc/force-app/main/default/objects/B2C_Client_ID__c/fields/Total_Success_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Success_Count__c</fullName>
    <description>... represents the count of successful authToken requests brokered via the B2C Commerce Account Manager.</description>
    <inlineHelpText>... represents the count of successful authToken requests brokered via the B2C Commerce Account Manager.</inlineHelpText>
    <label>Total Success Count</label>
    <summaryForeignKey>B2C_AuthToken__c.B2C_Client_ID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>