src/sfdc/force-app/main/default/objects/B2C_Client_ID__c/listViews/Active_B2C_Client_IDs.listView-meta.xml
<ListView>
    <fullName>Active_B2C_Client_IDs</fullName>
    <columns>B2C_Client_ID_Label__c</columns>
    <columns>NAME</columns>
    <columns>JWT_Certificate_Name__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Is_Certificate_Verfied__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active B2C Client IDs</label>
</ListView>