src/sfdc/force-app/main/default/objects/B2C_Client_ID__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>B2C_Client_ID_Label__c</columns>
    <columns>NAME</columns>
    <columns>JWT_Certificate_Name__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Is_Certificate_Verfied__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All B2C Client IDs</label>
</ListView>