src/sfdc/force-app/main/default/objects/B2C_Client_ID__c/listViews/Invalid_JWT_Certificates.listView-meta.xml
<ListView>
    <fullName>Invalid_JWT_Certificates</fullName>
    <columns>NAME</columns>
    <columns>B2C_Client_ID__c</columns>
    <columns>JWT_Certificate_Name__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Is_Certificate_Verfied__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Certificate_Verfied__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Invalid JWT Certificates</label>
</ListView>